--- a/style.css
+++ b/style.css
@@ -340,3 +340,58 @@ body{
     color: #627382;
     line-height: 20px;
 }
+
+
+
+
+
+
+/* footer section  */
+
+.footer{
+    background: #001931;
+}
+
+.footer-section{
+    padding-top: 130px;
+}
+
+.f-logo img{
+    width: 139px;
+}
+
+.f-content h5{
+    color: #fff;
+    font-size: 20px;
+    line-height: 28px;
+    text-transform: capitalize;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.f-icons{
+    gap: 10px;
+}
+
+.f-icons a{
+    display: block;
+    background: #fff;
+    color: #000;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 10px;
+}
+
+
+.copyright{
+    margin-top: 80px;
+    padding-bottom: 30px;
+}
+
+
+.copyright p{
+    color: #fafafa;
+    line-height: 24px;
+    padding-top: 30px;
+    border-top: 1px solid #E5E7EB;
+}
