added hover effet on links

--- a/style.css
+++ b/style.css
@@ -380,6 +380,14 @@ body{
     padding: 10px;
     border-radius: 50%;
     font-size: 10px;
+    transition: .5s;
+    border: 1px solid #fff;
+}
+
+.f-icons a:hover{
+    background: transparent;
+    color: #fff;
+    border: 1px solid #fff;
 }
 
 
